assets/css/style.css
/* ... */
.navbar .dropdown ul li {
	min-width: 200px;
}
.navbar .dropdown ul a {
	padding: 10px 20px;
	font-weight: 400;
}
.navbar .dropdown ul a i {
	font-size: 12px;
}
.navbar .dropdown ul a:hover,
.navbar .dropdown ul .active:hover,
.navbar .dropdown ul li:hover > a {
	color: var(--primary);
}
.navbar .dropdown:hover > ul {
	opacity: 1;
	top: 100%;
	visibility: visible;
}
.navbar .dropdown .dropdown ul {
	top: 0;
	left: calc(100% - 30px);
	visibility: hidden;
}
.navbar .dropdown .dropdown:hover > ul {
	opacity: 1;
	top: 0;
	left: 100%;
	visibility: visible;
}
@media (max-width: 1366px) {
	.navbar .dropdown .dropdown ul {
		left: -90%;
	}
	.navbar .dropdown .dropdown:hover > ul {
		left: -100%;
	}
}

/**
* Mobile Navigation 
*/
.mobile-nav-toggle {
	color: var(--primary-contrast);
	font-size: 28px;
	cursor: pointer;
	display: none;
	line-height: 0;
	transition: 0.5s;
}
.mobile-nav-toggle.bi-x {
	color: var(--primary-contrast);
}

@media (max-width: 991px) {
	.mobile-nav-toggle {
		display: block;
	}

	.navbar ul {
		display: none;
	}
}
.navbar-mobile {
	position: fixed;
	overflow: hidden;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	background: rgba(9, 9, 9, 0.9);
	transition: 0.3s;
	z-index: 999;
}
.navbar-mobile .mobile-nav-toggle {
	position: absolute;
	top: 15px;
	right: 15px;
}
.navbar-mobile ul {
	display: block;
	position: absolute;
	top: 55px;
	right: 15px;
	bottom: 15px;
	left: 15px;
	padding: 10px 0;
	background-color: var(--primary);
	overflow-y: auto;
	transition: 0.3s;
}
.navbar-mobile a,
.navbar-mobile a:focus {
	padding: 10px 20px;
	font-size: 15px;
	color: var(--primary-contrast);
}
.navbar-mobile > ul > li {
	padding: 0;
}
.navbar-mobile a:hover:before,
.navbar-mobile li:hover > a:before,
.navbar-mobile .active:before {
	visibility: hidden;
}
.navbar-mobile a:hover,
.navbar-mobile .active,
.navbar-mobile li:hover > a {
	color: var(--secondary);
}
.navbar-mobile .getstarted,
.navbar-mobile .getstarted:focus {
	margin: 15px;
}
.navbar-mobile .dropdown ul {
	position: static;
	display: none;
	margin: 10px 20px;
	padding: 10px 0;
	z-index: 99;
	opacity: 1;
	visibility: visible;
	background: var(--primary);
	box-shadow: 0px 0px 30px var(--primary-bg-shadow);
}
.navbar-mobile .dropdown ul li {
	min-width: 200px;
}
.navbar-mobile .dropdown ul a {
	padding: 10px 20px;
}
.navbar-mobile .dropdown ul a i {
	font-size: 12px;
}
.navbar-mobile .dropdown ul a:hover,
.navbar-mobile .dropdown ul .active:hover,
.navbar-mobile .dropdown ul li:hover > a {
	color: var(--primary);
}
.navbar-mobile .dropdown > .dropdown-active {
	display: block;
}

/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
#hero {
	width: 100%;
	height: 75vh;
	background: url('../img/carro-claro.jpg') top left;
	background-size: cover;
	position: relative;
}
#hero:before {
	content: '';
	background: rgba(255, 255, 255, 0.3);
	position: absolute;
	bottom: 0;
	top: 0;
	left: 0;
	right: 0;
}
#hero .container {
	position: relative;
}
#hero h1 {
	margin: 0;
	font-size: 48px;
	font-weight: 700;
	line-height: 56px;
	color: var(--primary-contrast);
	font-family: 'Poppins', sans-serif;
}
#hero h1 span {
	color: var(--secondary);
}
#hero h2 {
	color: var(--primary-contrast);
	margin: 5px 0 30px 0;
	font-size: 24px;
	font-weight: 400;
}
#hero .btn-get-started {
	font-family: 'Roboto', sans-serif;
	text-transform: uppercase;
	font-weight: 500;
	font-size: 14px;
	letter-spacing: 1px;
	display: inline-block;
	padding: 10px 28px;
	border-radius: 4px;
	transition: 0.5s;
	color: var(--primary-contrast);
	background: var(--primary);
}
#hero .btn-get-started:hover {
	background: var(--secondary);
	color: var(--secondary-contrast);
}
#hero .btn-watch-video {
	font-size: 16px;
	transition: 0.5s;
	margin-left: 25px;
	color: var(--primary-contrast);
	font-weight: 600;
	display: flex;
	align-items: center;
}
#hero .btn-watch-video i {
	color: var(--primary);
	font-size: 32px;
	transition: 0.3s;
	line-height: 0;
	margin-right: 8px;
}
#hero .btn-watch-video:hover {
	color: var(--primary);
}
#hero .btn-watch-video:hover i {
	color: var(--light-primary);
}
@media (min-width: 1024px) {
	#hero {
		background-attachment: fixed;
	}
}
@media (max-width: 768px) {
	#hero {
		height: 100vh;
	}
	#hero h1 {
		font-size: 28px;
		line-height: 36px;
	}
	#hero h2 {
		font-size: 18px;
		line-height: 24px;
		margin-bottom: 30px;
	}
	#hero .btn-get-started,
	#hero .btn-watch-video {
		font-size: 13px;
	}
}
@media (max-height: 500px) {
	#hero {
		height: 120vh;
	}
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
	padding: 60px 0;
	overflow: hidden;
}

.section-bg {
	background-color: var(--secondary);
}

.section-title {
	text-align: center;
	padding-bottom: 30px;
}
.section-title h2 {
	font-size: 13px;
	letter-spacing: 1px;
	font-weight: 700;
	padding: 8px 20px;
	margin: 0;
	background: var(--primary);
	color: var(--secondary);
	display: inline-block;
	text-transform: uppercase;
	border-radius: 50px;
}
.section-title h3 {
	margin: 15px 0 0 0;
	font-size: 32px;
	font-weight: 700;
}
.section-title h3 span {
	color: var(--primary);
}
.section-title p {
	margin: 15px auto 0 auto;
	font-weight: 600;
}
@media (min-width: 1024px) {
	.section-title p {
		width: 70%;
	}
}

/*--------------------------------------------------------------
# Breadcrumbs
--------------------------------------------------------------*/
.breadcrumbs {
	padding: 20px 0;
	background-color: #f1f6fe;
	min-height: 40px;
}
.breadcrumbs h2 {
	font-size: 24px;
	font-weight: 300;
	margin: 0;
}
@media (max-width: 992px) {
	.breadcrumbs h2 {
		margin: 0 0 10px 0;
	}
}
.breadcrumbs ol {
	display: flex;
	flex-wrap: wrap;
	list-style: none;
	padding: 0;
	margin: 0;
	font-size: 14px;
}
.breadcrumbs ol li + li {
	padding-left: 10px;
}
/* ... */

